  * Raise Webrat::PageLoadError when a failure occurs so that application exceptions
    can be more accurately tested (Ryan Briones)
  * Helpful error message for missing option in select box. [#40] (Ben Mabey)
  * Extracted save_and_open page to make it usable in Selenium mode (Luke Melia)
  * Added save_and_open_screengrab for Selenium mode (Luke Melia)

* Bug fixes
  
  * Support Rails > v2.2 by using ActionController::RequestParser for param parsing [#107]
    (Marcello Nuccio)
  * Raise a Webrat::NotFoundError if the scope passed to #within doesn't exist [#90]
  * Match against link _text_ which decodes character references.
    Useful for multibyte languages like Japanese (moronatural@gmail.com)
  * Fix params hash generation for Mechanize when Merb is not defined [#62]
  * Expose some Webrat methods that were missing from the Webrat::Methods module
    (Low Chin Chau)
  * Allow mechanize session to pass through basic auth (Ryan Briones)
  * Improvements to the Mechanize support (Jeremy Burks)
  * Fix following fully qualified local links (Lawrence Pit)
  * Fixed bug where Webrat would lose complex parameters (like foo[bar[baz]][])
    in Merb due to not correctly merging Mashes. (Drew Colthorp)
  * Extend Rails' ActionController::IntegrationTest instead of
    ActionController::Integration::Session (Fixes using Webrat's #select method and
    avoids usage of method_missing)
  * Ensure that Webrat::MechanizeSession.request_page always uses an absolute
    URL. (Graham Ashton)
  * Strip anchor tags from URIs before passing to Rails integration session
    (Noah Davis)
  * Treat text and regexp when matching Selenium buttons (Ross Kaffenberger)
  * Allow SeleniumSession's click_button to be called without an argument without
    blowing up (Luke Melia)

== 0.3.4 / 2008-12-29

* 1 Minor enhancement

  * Fix compatibility with Nokogiri 1.1.0 on JRuby

* 1 Bug fix

  * Correct version for Nokogiri dependency in gem

== 0.3.3 / 2008-12-28

* 1 Minor enhancement
