@@ -68,6 +68,8 @@
 
 * Bug fixes
   
+  * Fixed bug where Scope was creating a new DOM rather than re-using the existing DOM.
+    [#105] (Zach Dennis)
   * Support Rails > v2.2 by using ActionController::RequestParser for param parsing [#107]
     (Marcello Nuccio)
   * Raise a Webrat::NotFoundError if the scope passed to #within doesn't exist [#90]
